# PythonBackend

pubmed_fetcher/: README.md  pyproject.toml
pubmed_fetcher/pubmed_fetcher/: fetcher.py
pubmed_fetcher/scripts/: get_papers_list.py
